--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width"/>
     <title>Welcome to Kokoa Talk</title>
 </head>
     <body>
-    
+        <div id="status bar">
+            <div class="status-bar_column">
+                <span>No Service</span>
+                <i class="fa-solid fa-wifi"></i>
+            </div>
+            <div class="status-bar_column">
+                <span>05:24</span>
+            </div>
+            <div class="status-bar_column">
+                <span>110%</span>
+                <i class="fa-solid fa-battery-full"></i>
+                <i class="fa-solid fa-bolt-lightning"></i>
+            </div>
+        </div>
+        <script src="https://kit.fontawesome.com/5976348e1b.js" crossorigin="anonymous"></script>
     </body>
-    
 </html>
