Finished Navigation Bar

--- a/friends.html
+++ b/friends.html
@@ -30,13 +30,19 @@
                     <a class="nav__link"href="friends.html"><i class="nav__btn--icon fa-solid fa-user fa-2x"></i></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link"href="#"><i class="nav__btn--icon fa-regular fa-comment fa-2x"></i></a>
+                    <a class="nav__link"href="#">
+                        <span class="nav__message-notification">1</span>
+                        <i class="nav__btn--icon fa-regular fa-comment fa-2x"></i>
+                    </a>
                 </li>
                 <li class="nav__btn">
                     <a class="nav__link"href="#"><i class="nav__btn--icon fa-solid fa-magnifying-glass fa-2x"></i></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link"href="#"><span class="nav__btn--icon fa-solid fa-ellipsis fa-2x"></span></a>
+                    <a class="nav__link"href="#">
+                        <span class="nav__ellipsis-notification"></span>
+                        <span class="nav__btn--icon fa-solid fa-ellipsis fa-2x"></span>
+                    </a>
                 </li>
             </ul>
         </nav>
