--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
         <form action="friends.html" method ="get" id="login-form">
             <input name="username" required type="text" placeholder="Email or phone number"/>
-            <input name="pssword" required type="password" placeholder="Password"/>
+            <input name="password" required type="password" placeholder="Password (Do not submit the real password)"/>
             <input type="submit" value="Log In"/>
             <input type="submit" value="Sign Up"/>
             <a href="#">Find Kokoa Account or Password</a>
