--- a/friends.html
+++ b/friends.html
@@ -40,7 +40,7 @@
                 </li>
                 <li class="nav__btn">
                     <a class="nav__link"href="#">
-                        <i class="nav__ellipsis-notification badge"></i>
+                        <i class="nav__ellipsis-notification"></i>
                         <span class="fa-solid fa-ellipsis fa-2x"></span>
                     </a>
                 </li>
