--- a/friends.html
+++ b/friends.html
@@ -36,12 +36,13 @@
                     </a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link"href="#"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+                    <a class="nav__link"href="find.html">
+                    <i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link"href="#">
-                        <i class="nav__ellipsis-notification"></i>
-                        <span class="fa-solid fa-ellipsis fa-2x"></span>
+                    <a class="nav__link"href="more.html">
+                        <i class="nav__ellipsis-notification badge--small"></i>
+                        <i class="fa-solid fa-ellipsis fa-2x"></i>
                     </a>
                 </li>
             </ul>
@@ -62,7 +63,7 @@
             <i class="fa-solid fa-chevron-right fa-xs"></i>
         </a>
         
-        <main class="friends-screen">
+        <main class="main-screen">
             
             <div class="user-component">
                 <div class="user-component__column">
