Added More Screen -Finished Menu Selection

--- a/find.html
+++ b/find.html
@@ -52,7 +52,7 @@
         </nav>
         
         <header class="screen-header">
-            <h1 class="screen-header__title">Chats</h1>
+            <h1 class="screen-header__title">Find</h1>
             <div class="screen-header__icons">
                 <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
                 <span>
