--- a/find.html
+++ b/find.html
@@ -56,8 +56,10 @@
             <div class="screen-header__icons">
                 <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
                 <span>
-                    <i class="fa-solid fa-gear fa-lg"></i>
-                    <i class="screen-header__gear-notification badge--small"></i>
+                    <a href="settings.html">
+                        <i class="fa-solid fa-gear fa-lg"></i>
+                        <i class="screen-header__gear-notification badge--small"></i>
+                    </a>
                 </span>
             </div>
         </header>
