Added Chat Screen

--- a/chats.html
+++ b/chats.html
@@ -67,6 +67,7 @@
         <main class="main-screen">
             
             <div class="chats-screen__chat">
+                <a href="chat.html">
                  <div class="user-component">
                     <div class="user-component__column">
                         <img 
@@ -83,6 +84,7 @@
                         <span class="badge">1</span>
                     </div>
                 </div>
+                </a>
             </div>
             
         </main>
