--- a/more.html
+++ b/more.html
@@ -82,7 +82,6 @@
                 </div>
             </div>
             
-<<<<<<< HEAD
             <div class="icon-row">
                 <div class="icon-row__icon">
                     <i class="fa-regular fa-calendar-check"></i>
@@ -109,7 +108,11 @@
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
                             <i class="fas fa-quote-right"></i>
-=======
+                        </div>
+                    </div>
+                </div>
+            </div>
+                        
             <div class="menu-selection">
                 <div class="menu-selection__column">
                     <div class="menu-selection__column__row">
@@ -126,8 +129,7 @@
                         <div class="menu-selection__column__row">
                             <i class="fa-solid fa-box-archive"></i>
                             <i class="menu-selection__badge badge--small"></i>
-                            <span>Talk Drive</span>
->>>>>>> my-own-version
+                            <span>Talk Drive</span>>
                         </div>
                         <span class="more-suggestions__icon-text">Kokoa Story</span>
                     </div>
