--- a/more.html
+++ b/more.html
@@ -56,7 +56,7 @@
                 <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
                 <span><i class="fa-solid fa-music fa-lg"></i></span>
                 <span>
-                    <a href="setting.html">
+                    <a href="settings.html">
                         <i class="fa-solid fa-gear fa-lg"></i>
                         <i class="screen-header__gear-notification badge--small"></i>
                     </a>
